--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="connect-src https://*.themoviedb.org http://localhost/ https://*.000webhostapp.com">   
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://hanamineposapp.000webhostapp.com https://*.000webhostapp.com; connect-src 'self' https://hanamineposapp.000webhostapp.com https://*.000webhostapp.com; img-src 'self' https://image.tmdb.org; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -12,13 +11,16 @@
     <title>Hanami</title>
 </head>
 
+<!-- <a href="login.html"><label class="ingresar-text">ingresar</label></a> -->
+
 <body>
+
     <div class="app">
         <header>
             <div class="header-div-contenedor">
                 <div class="header-div-contenedor-item1"><label>Hanami</label></div>
                 <div class="header-div-contenedor-item2"><img src="img/logo.png" class="logo"></div>
-                <div class="header-div-contenedor-item3"><a href="login.html"><label>ingresar</label></a></div>
+                <div class="header-div-contenedor-item3"> <a href="login.html"><button>Ingresar</button></a></div>
             </div>
         </header>
         <section>
@@ -45,18 +47,39 @@
                 <div class="titulo-item2"><button>Comienza ahora</button></div>
                 <div class="titulo-item3">
                     La red social favorita de los amantes del cine.
-                    Proximamente disponible en PC y iOS.
+                    Proximamente disponible en PC y iOS. zzz
                 </div>
             </div>
         </section>
-    </div>
-    <script src="cordova.js"></script>
-    <script src="js/index.js"></script>
-    <script src="./library/Jquery/Jquery.js"></script>
-    <script src="./js/sesion/sesion_check.js"></script>
-     <script>
-        
-     </script>
-</body>
 
+<section class="slider-patrocinios">
+    <div class="wrapper">
+        <div class="infinite-scroll">
+            <img class="item" src="img/img1.png">
+            <img class="item" src="img/img2.png">
+            <img class="item" src="img/img5.png">
+            <img class="item" src="img/img4.png">
+            <img class="item" src="img/img1.png">
+            <img class="item" src="img/img2.png">
+            <img class="item" src="img/img5.png">
+            <img class="item" src="img/img4.png">
+        </div>
+    </div>
+</section>
+
+        <section class="section-cards">
+
+        </section>
+    </div>
+
+    <script src="cordova.js"></script>
+    <script src="./js/cdn/Jquery.js"></script>
+    <script src="./js/test_db.js"></script>
+    <script src="js/index.js"></script>
+    <script type="module" src="./js/sesion/sesion_check.js"></script>
+    <!-- <script src="./js/sesion/sesion_check.js"></script> -->
+
+</body>
 </html>
+
+<!-- xdd -->
